adding endpoints for commentservice
