# models/trail_info.py
@@ -2,10 +2,10 @@ from . import db
 
 class TrailInfo(db.Model):
     __tablename__ = 'TrailInfo'
-    __table_args__ = {'schema': 'CW2'}
+    __table_args__ = {'schema': 'Referral'}
 
-    TrailID = db.Column(db.Integer, db.ForeignKey('CW2.Trail.TrailID'), primary_key=True)
-    InfoID = db.Column(db.Integer, db.ForeignKey('CW2.Info.InfoID'), primary_key=True)
+    TrailID = db.Column(db.Integer, db.ForeignKey('Referral.Trail.TrailID'), primary_key=True)
+    InfoID = db.Column(db.Integer, db.ForeignKey('Referral.Info.InfoID'), primary_key=True)
     AdditionalInfo = db.Column(db.String(255), nullable=True)
 
     # Relationships
